--- a/src/main/webapp/style/main.css
+++ b/src/main/webapp/style/main.css
@@ -1,4 +1,90 @@
 body {
-    font-family: Verdana, Helvetica, sans-serif;
-    background-color: #FFFFCC;
+
+	font-family: Garamond, sans-serif; 
+	font-size: 18px;
+	    
+	background-color: #CCCCCC;    
+    background-image: url("background.jpg");
+	-moz-background-size: cover;
+	-webkit-background-size: cover;
+	background-size: cover;
+	background-position: top center !important;
+	background-repeat: no-repeat !important;
+	background-attachment: fixed;
 }
+
+h1 {
+	color: 00CC33; 
+	text-align: center; 
+	width: 100%; 
+	padding-top: 10px;
+}
+
+.content {
+	width: 38%; 
+	min-width: 450px;
+	padding: 0px 15px 15px 15px;
+	background: rgba(200,200,200,0.7); 
+	text-align: center;
+}
+
+.footer {
+	font-size: 12px;
+}
+
+.pageBreak {
+	margin: 80px 0 15px 0;
+}
+
+.clearFix {
+	clear: both;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+.subscriptionForm {
+	margin-top: 50px;
+	text-align: left;
+}
+
+.emailLabel {
+	float: left; 
+	margin-right: 20px;
+}
+
+.emailInput {
+	width: 220px;
+}
+
+.submit {
+	background-color: 3399FF; 
+	font-size: 14px; 
+	margin-left: 40%; 
+	margin-top: 20px;"
+}
+
+.successText {
+	width: 80%; 
+	margin: 0 auto;
+}
+
+.instructions {
+	padding-top: 20px;
+}
+
+.error {
+	color: red; 
+	font-size: 15px; 
+	font-weight: bold;
+}
+
+.notification {
+	font-weight: bold; 
+	color: 3399FF; 
+	font-size: 20px; 
+	padding-bottom: 15px;
+}
+
+
